--- a/pages-1.html
+++ b/pages-1.html
@@ -128,7 +128,7 @@ s.parentNode.insertBefore(fs, s);
 <div class="itemContainer">
 <div title="" id="nav2" class="item itemCol2 itemIndex1 itemSelected itemSelectedIndex1" colid="2">
 <div class="itemCenter">
-    <a title="" class="footerItemTopLink" href="file:///C:/Users/Lenovo/Desktop/pages-1.html" child="0">
+    <a title="" class="footerItemTopLink" href="./pages-1.html" child="0">
       <span class="itemName0">实验简介</span>
     </a></div></div>
 
@@ -136,7 +136,7 @@ s.parentNode.insertBefore(fs, s);
 </div>
 <div title="" id="nav104" class="item itemCol104 itemIndex2" colid="104" >
 <div class="itemCenter">
-  <a title="" class="footerItemTopLink" href="file:///C:/Users/Lenovo/Desktop/pages-2.html" child="0">
+  <a title="" class="footerItemTopLink" href="./pages-2.html" child="0">
      <span class="itemName0">实验设计</span>
    </a></div></div>
 
@@ -144,7 +144,7 @@ s.parentNode.insertBefore(fs, s);
 </div>
 <div title="" id="nav105" class="item itemCol105 itemIndex3" colid="105" >
 <div class="itemCenter">
-  <a title="" class="footerItemTopLink" href="file:///C:/Users/Lenovo/Desktop/pages-3.html" child="0">
+  <a title="" class="footerItemTopLink" href="./pages-3.html" child="0">
     <span class="itemName0">实验流程</span>
   </a></div></div>
 
@@ -152,7 +152,7 @@ s.parentNode.insertBefore(fs, s);
 </div>
 <div title="" id="nav106" class="item itemCol106 itemIndex4" colid="106" >
 <div class="itemCenter">
-  <a title="" class="footerItemTopLink" href="file:///C:/Users/Lenovo/Desktop/pages-4.html" child="0">
+  <a title="" class="footerItemTopLink" href="./pages-4.html" child="0">
   <span class="itemName0">实验结果</span>
 </a></div></div>
 
